// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  class="cloud-button normal default"
  type="button"
>
  Follow
</button>
`;

exports[`Button renders correctly123 1`] = `
<button
  className="cloud-button normal default"
  disabled={false}
  type="button"
>
  Follow
</button>
`;

exports[`Button should render empty button without error 1`] = `
<Button
  block={false}
  className=""
  href=""
  htmlType="button"
  loading={false}
  size="default"
  target=""
  type="normal"
>
  <button
    className="cloud-button normal default"
    disabled={false}
    type="button"
  >
     
  </button>
</Button>
`;

exports[`Button should support link button 1`] = `
<a
  class="cloud-button normal default"
  href="https://baidu.com"
  target="__blank"
>
  link
</a>
`;
